--- a/Biocell/css/biocell.css
+++ b/Biocell/css/biocell.css
@@ -107,10 +107,20 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .swiper-slider .category-product h3 {
+    font-size: 18px;
+    margin: 0;
+  }
   .swiper-slider .category-product img {
-    padding: 12px;
-    padding-top: 68px;
-    height: 220px;
+    padding: 10px;
+    padding-top: 70px;
+    height: 185px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .swiper-slider .category-product img {
+    height: 165px;
   }
 }
 
@@ -256,4 +266,170 @@ font-size: 20px;
 
 .site-filters ul.filters li.btn:hover a{
   color: var(--rgba-primary-9);
+}
+
+.sells-overview{
+  padding: 40px 0 30px;
+}
+
+.sells-overview .heading{
+display: flex;
+align-items: start;
+gap: 40px;
+}
+
+.sells-overview .heading > img {
+  width: 120px;
+}
+
+.sells-overview .heading img:nth-child(1){
+  transform: rotate(-20deg);
+}
+
+.sells-overview .heading img:nth-child(3){
+  transform: rotate(20deg);
+}
+
+.sells-overview h1 {
+text-align: center;
+}
+
+.sells-overview p {
+  font-size: 20px;
+  margin: 15px 0 35px;
+text-align: center;
+}
+
+.sells-overview .boxes {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 20px;
+  background-color: var(--rgba-primary-9);
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.sells-overview .box {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  transition-duration: 400ms;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+}
+
+.sells-overview .box:hover {
+scale: 1.01;
+}
+
+.sells-overview .box div{
+  width: 80px;
+  margin: auto;
+  padding: 15px;
+  border-radius: 50%;
+  background-color: var(--rgba-primary-9);;
+}
+
+.sells-overview .box h3{
+  font-weight: 600;
+  margin: 12px 0 5px;
+}
+
+.sells-overview .box h4{
+  font-weight: 600;
+}
+
+
+@media screen and (max-width: 991px) {
+  .sells-overview .boxes {
+    grid-template-columns: auto auto;
+  }
+  .sells-overview .box {
+    padding: 12px;
+  }
+  .sells-overview .box div{
+    width: 65px;
+    padding: 12px;
+  }
+  .sells-overview .heading{
+    gap: 10px;
+    }
+    
+    .sells-overview .heading > img {
+      width: 0px;
+    }
+    
+    .sells-overview p {
+      font-size: 18px;
+      margin: 10px 0 25px;
+    }
+}
+
+
+@media only screen and (max-width: 575px){
+  .sells-overview{
+    padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 450px){
+  .sells-overview .boxes {
+    grid-template-columns: auto;
+  }
+}
+
+.misvis{
+  padding: 60px 0 45px;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap:40px
+}
+
+.misvis > div{
+  background-color: white;
+  padding: 15px;
+  padding-top: 10px;
+  border-radius: 15px;
+  border: 2px solid var(--primary);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+.misvis div .heading {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+
+.misvis div .heading h2{
+margin: 0;
+}
+.misvis div .heading img{
+  width: 55px;
+}
+
+.misvis div h5{
+margin: 10px 0;
+color: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (max-width: 991px) {
+  .misvis{
+    grid-template-columns: auto auto;
+    gap:25px
+  }
+}
+
+@media only screen and (max-width: 767px){
+  .misvis{
+    padding: 40px 20px 30px;
+    grid-template-columns: auto;
+    gap:25px;
+  }
+}
+
+.site-footer .widget h6{
+  text-align: justify;
+font-weight: 600;
+color: #000000ae;
+margin-bottom: 30px;
 }
