--- a/Biocell/css/biocell.css
+++ b/Biocell/css/biocell.css
@@ -174,7 +174,6 @@
 }
 
 .btn {
-
 }
 
 .btn:hover {
@@ -182,6 +181,15 @@
   border: 1px solid var(--primary);
 }
 
+.white-btn{
+  color: var(--primary);
+  border-color: var(--primary);
+  background-color: inherit;
+}
+
+.single-product-info-left .btn{
+  margin-top: 25px;
+}
 
 .gallery-col .gallery-item img {
   mask-repeat: no-repeat;
@@ -199,7 +207,7 @@
 .left-side-image {
   width: 40px;
   position: absolute;
-  left: 0px;
+  left: -3px;
   top: 54%;
   height: 45%;
   transform: translate(0px, -50%);
@@ -210,7 +218,15 @@
   z-index: 9;
   border-radius: 0 30px 30px 0;
 }
-@media only screen and (max-width: 575px) {
+
+
+@media only screen and (max-width: 930px) {
+  .left-side-image {
+    left: -6px;
+  }
+}
+
+@media only screen and (max-width: 690px) {
   .left-side-image {
     display: none;
   }
@@ -250,6 +266,12 @@
   width: 88px;
   transform: rotate(20deg);
   transform-origin: 0% 0%;
+}
+
+@media only screen and (max-width: 930px) {
+  .left-side-image ul li img{
+    width: 65px;
+  }
 }
 
 .copyright-text{
