--- a/Biocell/css/biocell.css
+++ b/Biocell/css/biocell.css
@@ -506,7 +506,7 @@ margin-bottom: 30px;
 }
 
 .sub-menu-down ul.sub-menu li a{
-  font-size: 15px!important;
+  font-size: 16px!important;
 }
 
 @media screen and (min-width: 991px){
@@ -524,8 +524,67 @@ margin-bottom: 30px;
     opacity: 1!important;
     transform: translateY(0)!important;
   }
-  
-
 }
 
+ .offcanvas.show::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleX(-1);
+  background-image: url(../images/leaf-background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
 
+ul.lightgallery .portfolio-box.style-1 .product-tag .badge {
+font-size: 10px;
+margin-bottom: 5px;
+min-height: 18px;
+}
+
+ul.lightgallery li.col-xl-3 .portfolio-box.style-1 h2.title {
+  margin: 5px 0 10px;
+  line-height: 20px;
+}
+
+ul.lightgallery li.col-xl-3 .portfolio-box.style-1 h2.title a{
+  font-size: 16px;
+}
+
+.map .logo-badge .logo {
+  width: 80px;
+}
+
+@media only screen and (max-width: 1480px) {
+  .map .logo-badge .logo {
+    width: 55px;
+  }
+
+  .map .logo-badge .shap {
+    width: 90px;
+  }
+}
+
+@media screen and (max-width: 991px){
+  .map .logo-badge .logo {
+    width: 40px;
+  }
+
+  .map .logo-badge .shap {
+    width: 70px;
+  }
+}
+
+@media screen and (max-width: 450px){
+  .map .logo-badge .logo {
+    width: 24px;
+  }
+
+  .map .logo-badge .shap {
+    width: 40px;
+  }
+}
