--- a/Biocell/css/biocell.css
+++ b/Biocell/css/biocell.css
@@ -643,3 +643,7 @@ transform: translateY(-2px);
 .icon-bx-wraper.style-7 .contact-location p {
   text-transform: capitalize;
 }
+
+.logo-badge{
+  top: 55%!important;
+}
