--- a/telemed web/style.css
+++ b/telemed web/style.css
@@ -119,3 +119,36 @@ transform: translateY(-3px);
    }
 
 }
+
+@media screen and (max-width: 560px) {
+
+   .left-nav img {
+      width: 240px;
+   }
+
+   .menu ul {
+      gap: 15px;
+   }
+
+   .menu ul a{
+      font-size: 16px;
+   }
+   
+   .download-btn{
+   padding: 6px 22px;
+   }
+
+   .download-btn a{
+      font-size: 18px;
+   }
+   
+   #banner-btn{
+      left: 20px;
+      padding: 2px 10px;
+   }
+   #banner-btn a{
+      font-size: 10px;
+      line-height: 2px;
+   }
+
+}
