--- a/telemed web/style.css
+++ b/telemed web/style.css
@@ -152,3 +152,13 @@ transform: translateY(-3px);
    }
 
 }
+
+.footer-area{
+   border-radius: 50% 40% 0% 0% / 30% 30% 0% 0%;
+}
+
+@media screen and (max-width: 768px){
+   .footer-area{
+      border-radius: 50% 40% 0% 0% / 10% 10% 0% 0%;
+   }
+}
